# parallel_pso

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.txt  funcs.py  performance.py  pycupso.py  pypso.py  requirements.txt
assets/: Comp_ALL_record.json  _note.txt  _plot.py
assets/Exp/: Exp-dim_CPU.json  Exp-dim_GPU.json  Exp-dim_OMP_threads=16.json  Exp-dim_PTHREAD_threads=16.json  Exp-num_CPU.json  Exp-num_GPU.json  Exp-num_OMP_threads=16.json  Exp-num_PTHREAD_threads=16.json
assets/Scl/: Scl_OMP_scaling.json  Scl_PTHREAD_scaling.json
assets/Test/: Test-dim_GPU.json  Test-num_GPU.json  Test_OMP_scaling.json
assets/cuPSO/: cuPSO_note.txt
core/: __main__.py  animation.py  perf_cuda.py  perf_number.py  perf_scale.py  performance.py  plot.py  plot_number.py  plot_scale.py  pycupso.py  pyomppso.py  pypso.py  pypthreadpso.py
csrc/: Makefile  bind.cpp  test.cu
csrc/buffer/: buffer.cu
csrc/buffer/include/: buffer.cuh
csrc/cuPSO/: Makefile  bind.cpp  test.cu
csrc/cuPSO/buffer/include/: buffer.cuh
csrc/cuPSO/funcs/include/: funcs.cuh
csrc/cuPSO/pso/: evolve.cu  position.cu  velocity.cu
csrc/cuPSO/pso/include/: evolve.cuh  position.cuh  velocity.cuh
csrc/cuPSO/utils/: utils.cu
csrc/cuPSO/utils/include/: utils.cuh
csrc/cuda/: Makefile  evolve.cu  levy.cu  out.txt  position.cu  test  test.cu  utils.cu  velocity.cu
csrc/cuda/include/: evolve.cuh  levy.cuh  position.cuh  utils.cuh  velocity.cuh
csrc/funcs/: funcs.cu
csrc/funcs/include/: funcs.cuh
csrc/ompPSO/: ompPSO.cpp
csrc/pso/: evolve.cu  levy.cu  position.cu  test.cu  utils.cu  velocity.cu
csrc/pso/include/: evolve.cuh  position.cuh  utils.cuh  velocity.cuh
csrc/pthreadPSO/: pthreadPSO.cpp
csrc/utils/: utils.cu
csrc/utils/include/: utils.cuh
cuPSO/: __init__.py  __init__.pyi  cuPSO.pyi
ompPSO/: __init__.py  __init__.pyi  ompPSO.pyi
pthreadPSO/: __init__.py  __init__.pyi
tests/: test_buffer.py  test_cuPSO.py  test_update.py
